# pre-commit-VBA

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_JA.md  LICENSE  README.md  README_JA.md  cspell.json  macros.py  main.py  mise.toml  mkdocs.yml  pre_commit_vba.py  pyproject.toml  zensical.toml
.github/: SKILL.md  dependabot.yml
.github/skills/: TEMPLATE.md  issue-create.md  review-response.md  zensical-docs.md
.github/skills/issue-create/: SKILL.md
.github/skills/review-response/: SKILL.md
.github/skills/skill-template/: SKILL.md
.github/skills/zensical-docs/: SKILL.md
.github/workflows/: docs.yml
docs/: index.md
docs/en/: code-of-conduct.md  configuration.md  contributing.md  getting-started.md  index.md  options-guide.md  reference.md
docs/en/demo/: sample-usage.md
docs/ja/: code-of-conduct.md  configuration.md  contributing.md  getting-started.md  index.md  options-guide.md  reference.md
src/: __init__.py
src/pre_commit_vba/: pre_commit_vba.py
tests/: __init__.py  test.xlsm  test1.xlsx  test_excel_custom_ui_extractor.py  test_excel_vb_component.py  test_excel_vba_exporter.py  test_pre_commit_vba.py  test_utf8_converter.py  test_vb_component_type.py
tests/check/: WithoutRubberduckAddinReferences.xlsm  test_check_rubberduck_addin.py
tests/extract/: no_custom_ui.xlsm  test_excel_custom_ui_extractor.py  test_excel_vba_exporter.py  test_utf8_converter.py  test_vb_component_type.py
tests/match/: test_check_branch_name.py
(+49 files in other folders)
